--- a/rebar.config
+++ b/rebar.config
@@ -8,8 +8,8 @@
 	    {"linux", "CFLAGS", "$CFLAGS $SDL_CFLAGS"},
 	    {"linux", "LDFLAGS", "$LDFLAGS $SDL_LIBDIR"},
 
-	    {"darwin", "CFLAGS", "$CFLAGS -ObjC -D_OSX_COCOA -I/opt/X11/include"},
-	    {"darwin", "LDFLAGS", "$LDFLAGS -framework SDL -rpath @executable_path/../Frameworks"},
+	    {"darwin", "CFLAGS", "$CFLAGS -ObjC -D_OSX_COCOA `sdl-config --cflags`"},
+	    {"darwin", "LDFLAGS", "$LDFLAGS `sdl-config --libs`"},
 	    
 	    {"win32", "CFLAGS", "$CFLAGS -DWIN32 -D_WIN32 -D__WIN32__ $SDL_INCDIR"},
 	    {"win32", "DRV_CFLAGS", "/Zi /W3 $ERL_CFLAGS"},
